[project]
name = "camera-driver-python"  
version = "0.1.0"  
description = "A simplified multi camera driver interface"  
readme = "README.md" 
requires-python = ">=3.11"
license = {file = "LICENSE"}

maintainers = [
  {name = "Oliver Batchelor", email = "oliver.batchelor@canterbury.ac.nz" } 
]

dependencies = [
  "beartype",
  "python-dispatch",
  "nvjpeg-torch",
  "taichi_image",
  "disable_gc",
  "fuzzywuzzy",
  "numpy < 2.0"
]


[tool.setuptools.packages.find]
include = ["camera_driver"]

[project.urls] 
"Homepage" = "https://github.com/uc-vision/camera-driver-python"

[build-system]
requires = ["setuptools>=43.0.0",  "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[options]
dependency_links = ["https://pypi.taichi.graphics/simple/"]

[project.scripts]  # Optional

[tool.setuptools.package-data]

[tool.pyright]

[tool.ruff]
indent-width = 2


